# pyautd3_emulator

./: .coveragerc  .gitignore  .gitmodules  MANIFEST.in  Makefile.toml  README.md  ThirdPartyNotice.txt  pyproject.toml
.github/workflows/: build.yml
example/: modulation.py  output_ultrasound.py  rms.py  sound_field.py
pyautd3_emulator/: __init__.py  emulator.py  instant.py  range.py  record.py  recorder.py  rms.py
pyautd3_emulator/native_methods/: __init__.py  autd3capi_emulator.py
tests/: test_emulator.py
tools/: update_bin.py
tools/wrapper-generator/src/: main.rs
tools/wrapper-generator/src/python/: ctypes.rs  mod.rs
