[project]
name = "pyautd3_emulator"
authors = [{ name = "Shun Suzuki", email = "suzuki@hapis.k.u-tokyo.ac.jp" }]
version = "37.0.0a3"
description = "autd3-emulator library wrapper for python"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = ["numpy>=2.3.4", "polars>=1", "pyautd3==37.0.0a3"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
]
[project.urls]
Repository = "https://github.com/shinolab/pyautd3_emulator.git"

[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
pyautd3_emulator = ["py.typed"]

[tool.ruff]
target-version = "py312"
line-length = 150
exclude = [".venv", "venv"]

[tool.ruff.lint]
ignore = ["D", "SLF001", "C901", "PLR0913"]
select = ["ALL"]
fixable = ["ALL"]

[tool.ruff.lint.extend-per-file-ignores]
"pyautd3_emulator/*.py" = ["TD", "FIX002"]
"tests/*.py" = ["S101", "T201", "ANN201", "PLR0915", "PLR2004"]
"example/*.py" = ["T201", "PLR2004", "PD901"]
"pyautd3_emulator/native_methods/*.py" = ["ANN", "RUF012", "FBT001", "PLR0915"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = 'session'

[dependency-groups]
dev = ["matplotlib>=3.10.7", "pillow>=12.0.0", "mypy>=1.16.1", "pytest>=8.4.1", "pytest-xdist>=3.8.0", "ruff>=0.12.0", "pytest-cov>=7.0.0", "build>=1.3.0", "wheel>=0.45.1"]
